# gst-rtsp-cam

./: configure.ac
src/: Makefile.am  gst-rtsp-cam-media-factory.c  gst-rtsp-cam-media-factory.h  gst-rtsp-cam.c
